index.css
/* poppins-regular - latin */
@font-face {
  font-display: swap;
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 400;
  src: url('./fonts/poppins-v24-latin-regular.woff2') format('woff2');
}
/* poppins-italic - latin */
@font-face {
  font-display: swap;
  font-family: 'Poppins';
  font-style: italic;
  font-weight: 400;
  src: url('./fonts/poppins-v24-latin-italic.woff2') format('woff2');
}

.light {
    --backdrop: white;
    --font-color: black;
    --button-box: hsl(225, 35%, 90%);
    --button-box-hover: hsl(225, 35%, 85%);
    --button-box-click: hsl(225, 50%, 70%);
    --box-red: hsl(350, 30%, 83%);
    --header-color: hsl(225, 75%, 54%); /* I can't decide the exact hue! */
    --alert-background: rgb(67, 67, 67);
    --alert-font-color: rgb(230, 230, 230);
}

body {
    font-family: poppins;
    font-size: 20px;
    color: var(--font-color);
    background-color: var(--backdrop);
    margin: 0px;
}

header {
    background-color: var(--header-color);
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    margin-bottom: 4vw;
}

header select {
    font-family: inherit;
    font-size: inherit;
    color: inherit;
    border-radius: 8px;
    background-color: var(--button-box);
    border: none;
    padding: 11px 44px 13px 11px;
    min-width: 200px;
    max-width: 230px; /* Calculated so as to provide a 10px gap with the darkmode switch. */
    height: 50px;
    outline: none;
    cursor: pointer;
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    transition: background-color 0.3s ease;
}

header option {
    font-family: inherit;
    font-size: inherit;
    color: inherit;
    background-color: var(--button-box);
}

header svg { /* This is the arrow in the select element */
    position: absolute;
    right: 15px;
    width: 18px;
    height: auto;
    pointer-events: none;
    stroke: var(--font-color);
}

.miniSelector select {
    font-family: inherit;
    font-size: inherit;
    color: inherit;
    border-radius: 999px;
    background-color: var(--button-box);
    border: none;
    padding: 11px 44px 13px 14px;
    min-width: 190px;
    max-width: 230px;
    height: 45px;
    overflow: visible;
    outline: none;
    cursor: pointer;
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    transition: background-color 0.3s ease;
}

.miniSelector option {
    font-family: inherit;
    font-size: inherit;
    color: inherit;
    background-color: var(--button-box);
}

.miniSelector svg { /* This is the arrow in the select element */
    position: absolute;
    right: 15px;
    width: 18px;
    height: auto;
    pointer-events: none;
    stroke: var(--font-color);
}

main {
    padding-left: 5vw;
    padding-right: 5vw;
}

#container {
    display: flex;
    flex-direction: column;
    column-gap: 12px;
    row-gap: 20px;
    width: 100%;
    margin-bottom: 30px;
}

.mainbox {
    flex: 1;    /* each box takes 50% */
    display: flex;
    flex-direction: column; /* overriden for desktop */
    gap: 5px;
}

.mainfield {
    box-sizing: border-box;
    border-radius: 20px;
    border: none;
    padding: 12px;
    min-height: 180px;
    overflow: hidden;
}

textarea {
    font-family: monospace;
    font-size: 22px;
    resize: none;
    color: inherit;
    background-color: var(--button-box);
    transition: background-color 0.3s ease; /* ensure smooth transition both on hover and on hover-off */
}

/* Desktop layout */
@media (min-width: 700px) { /* Useful for mobile testing: https://stackoverflow.com/a/74067383 */

    #container {
        flex-direction: row;
    }

    .circleButton:hover {
        transition: background-color 0.3s ease;
        background-color: var(--button-box-hover);
    }
    textarea:hover {
        background-color: var(--button-box-hover);
    }
    header select:hover {
        background-color: var(--button-box-hover);
    }
    .miniSelector select:hover {
        background-color: var(--button-box-hover);
    }
}

textarea:focus {
    background-color: var(--button-box);
}

.flash-red {
  animation: flashRed 0.8s ease-out;
}

@keyframes flashRed {
  0%   { background-color: var(--box-red); }
  30%  { background-color: var(--box-red); }
  100% { background-color: var(--button-box); }
}

.boxHeader {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.fieldTitle {
    display: inline-block;
    font-weight: bold;
    font-size: 25px;
}

button {
    cursor: pointer;
}

.circleButton {
    display: inline-block;
    height: 45px;
    width: 45px;
    padding: 0px;
    padding-top: 3px;
    border-radius: 50%;
    border: none;
    background-color: var(--button-box);
}

.circleButton:active {
    transition: none;
    background-color: var(--button-box-click);
}

/* Container framework for the toggle */
.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
}

/* Hide the native browser checkbox */
.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

/* The tracking slider background */
.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: var(--button-box-hover);
    border-radius: 34px;
    transition: 0.4s;
}

/* The sliding circular knob */
.slider::before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    border-radius: 50%;
    transition: 0.4s;
}

/* Track color shift when checked */
input:checked + .slider {
    background-color: rgb(98, 218, 83);
}

/* Knob translation when checked */
input:checked + .slider::before {
    transform: translateX(26px);
}

@keyframes popUp {
    0% {transform: translateY(0px); visibility: visible;}
    5% {transform: translateY(-44px);}
    95% {transform: translateY(-44px);}
    100% {transform: translateY(0px); visibility: hidden;}
}

#copyAlert {
    display: inline-block;
    font-size: inherit;
    visibility: hidden;
    z-index: 1;
    position: fixed;
    left: 10px;
    bottom: -32px;
    box-sizing: border-box;
    padding: 5px;
    border-radius: 8px;
    font-family: inherit;
    font-size: inherit;
    color: var(--button-box);
    background-color: var(--alert-background);
    /* animation-timing-function: ease-in-out; */
}

.pop-up {
    animation: popUp 2s;
}

#info {
    margin-top: 30px;
}

#key {
    display: block;
    box-sizing: border-box;
    border-radius: 20px;
    border: none;
    padding: 12px;
    min-width: 200px;
    max-width: 100%;
    overflow: hidden;
    height: 55px; /* = 31 + 2*12, word height plus the padding. */
}

